test-files/expected/functionExpression.errors
functionExpression:3:31: error: declared type `string` does not match returned type `number`
   3 | var e = function (): string { return 1 }
     |                               ^^^^^^^^
functionExpression:4:1: error: cannot assign `(x: number) -> number` to value of type `() -> string`
   4 | e = f
     | ^^^^^
functionExpression:5:1: error: cannot assign `(x: <none>) -> any` to value of type `() -> string`
   5 | e = g
     | ^^^^^
functionExpression:6:1: error: cannot assign `() -> string` to value of type `(x: number) -> number`
   6 | f = e
     | ^^^^^
functionExpression:9:1: error: cannot assign `() -> number` to value of type `() -> string`
   9 | e = function () { return 0 }
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
functionExpression:11:1: error: cannot assign `(z: string) -> number` to value of type `(x: number) -> number`
  11 | f = function (z: string) { return 13 }
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
functionExpression:17:74: error: expected argument of type `number`, but got `string`
  17 | var misapply = function (f: (x: number) => number, x: string) { return f(x) }
     |                                                                          ^
